# jsts_debugger

./: .gitignore  README.md  __init__.py  pyproject.toml
jsts_debugger/: debugger.py  helpers.py  mcp.py  session.py
jsts_debugger/lib/utils/: command.py  deep_merge.py
scripts/: mcp_server.py
src/: config.py  mcp.py  session.py
src/jsts_debugger/: __init__.py  config.py  debugger.py  mcp.py  session.py
src/jsts_debugger/templates/: package.base.json  tsconfig.base.json
src/lib/utils/: remove_tabs.py
templates/: Dockerfile.base
tests/: conftest.py
tests/e2e/: test_breakpoints.py  test_debugger_extra.py  test_debugger_more.py  test_documentation_example.py  test_evaluation.py  test_runtime.py  test_session.py  test_session_timeout.py
tests/jsts_debugger/e2e/: helpers.py  test_breakpoints.py  test_debugger_extra.py  test_debugger_more.py  test_documentation_example.py  test_evaluation.py  test_runtime.py  test_session.py  test_session_timeout.py
