[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsts_debugger"
version = "0.1.1"
authors = [
  { name="Placeholder Name", email="placeholder@example.com" },
]
description = "An MCP Server for Remotely Debugging Arbitrary JavaScript/TypeScript Repositories"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp[server]",
    "docker",
    "websockets",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
"Homepage" = "https://github.com/example/jsts_debugger"
"Bug Tracker" = "https://github.com/example/jsts_debugger/issues"

[tool.setuptools.packages.find]
# No 'where' key needed, setuptools will find the package in the root.
