[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsts_debugger"
version = "0.1.1"
authors = [
  { name="JuHwiSang", email="juhs2005@gmail.com" },
]
description = "An MCP Server that Provides an Interface for LLMs to Remotely Debug JavaScript/TypeScript Repositories"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp[server]",
    "docker",
    "websockets",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
