[project]
name = "jsts_debugger"
version = "0.1.3"
authors = [
  { name="JuHwiSang", email="juhs2005@gmail.com" },
]
description = "An MCP Server that Provides an Interface for LLMs to Remotely Debug JavaScript/TypeScript Repositories"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp",
    "docker",
    "websockets",
    "httpx",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jsts_debugger = [
    "templates/*",
]